Задача TreeTraversal небольшой рефакторинг