@@ -16,10 +16,11 @@ class TreeTraversalTest {
     void testDifferentValuesOfNode() {
         Node root = new Node(1,
             new ArrayList<>(Arrays.asList(
-                new Node(3, new ArrayList<>(Arrays.asList(new Node(5),
-                    new Node(6)))),
-                new Node(2),
-                new Node(4))));
+                                new Node(3, new ArrayList<>(List.of(
+                                          new Node(5),
+                                          new Node(6)))),
+                                new Node(2),
+                                new Node(4))));
 
         List<List<Integer>> actual = treeTraversal.levelOrder(root);
         List<List<Integer>> expected = new ArrayList<>();
@@ -30,19 +31,20 @@ class TreeTraversalTest {
         assertEquals(expected, actual);
 
         root = new Node(1,
-            new ArrayList<>(Arrays.asList(
-                new Node(2),
-                new Node(3, new ArrayList<>(Arrays.asList(new Node(6),
-                    new Node(7, new ArrayList<>(List.of(
-                        new Node(11, new ArrayList<>(List.of(
-                            new Node(14)))))))))),
-                new Node(4, new ArrayList<>(List.of(
-                    new Node(8, new ArrayList<>(List.of(
-                        new Node(12))))))),
-                new Node(5, new ArrayList<>(Arrays.asList(
-                    new Node(9, new ArrayList<>(List.of(
-                        new Node(13)))),
-                    new Node(10)))))));
+            new ArrayList<>(List.of(
+                            new Node(2),
+                            new Node(3, new ArrayList<>(List.of(
+                                     new Node(6),
+                                     new Node(7, new ArrayList<>(List.of(
+                                              new Node(11, new ArrayList<>(List.of(
+                                                       new Node(14)))))))))),
+                            new Node(4, new ArrayList<>(List.of(
+                                     new Node(8, new ArrayList<>(List.of(
+                                              new Node(12))))))),
+                            new Node(5, new ArrayList<>(List.of(
+                                     new Node(9, new ArrayList<>(List.of(
+                                              new Node(13)))),
+                                     new Node(10)))))));
 
 
         actual = treeTraversal.levelOrder(root);
